--- a/trunk/MaxisGetIt/res/layout/activity_deal_post.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_deal_post.xml
@@ -56,6 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
+                    android:layout_gravity="center_vertical|left"
                     android:text="@string/enter_basic_detail"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp_13"
@@ -70,9 +71,10 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".42"
+                        android:layout_weight=".35"
                         android:drawableRight="@drawable/required_icon"
                         android:padding="5dp"
+                        android:layout_gravity="center_vertical|left"
                         android:text="@string/deal_title"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp_13" />
@@ -81,7 +83,7 @@
                         android:id="@+id/adp_title_text"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".58"
+                        android:layout_weight=".65"
                         android:background="@drawable/text_field"
                         android:inputType="textPersonName"
                         android:maxLength="30"
@@ -101,8 +103,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".42"
+                        android:layout_weight=".35"
                         android:drawableRight="@drawable/required_icon"
+                        android:layout_gravity="center_vertical|left"
                         android:padding="5dp"
                         android:text="@string/deal_desc"
                         android:textColor="@color/black"
@@ -112,7 +115,7 @@
                         android:id="@+id/adp_desc_txt"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".58"
+                        android:layout_weight=".65"
                         android:background="@drawable/text_field"
                         android:inputType="textMultiLine"
                         android:minLines="2"
@@ -131,8 +134,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".42"
+                        android:layout_weight=".35"
                         android:drawableRight="@drawable/required_icon"
+                        android:layout_gravity="center_vertical|left"
                         android:padding="5dp"
                         android:text="@string/choose_company"
                         android:textColor="@color/black"
@@ -143,7 +147,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight=".58"
+                        android:layout_weight=".65"
                         android:orientation="vertical" >
 
                         <Spinner
@@ -170,8 +174,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".42"
+                        android:layout_weight=".35"
                         android:drawableRight="@drawable/required_icon"
+                        android:layout_gravity="center_vertical|left"
                         android:padding="5dp"
                         android:text="@string/choose_category"
                         android:textColor="@color/black"
@@ -181,7 +186,7 @@
                         android:id="@+id/adp_category_chooser"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".58"
+                        android:layout_weight=".65"
                         android:background="@drawable/dropdown_box"
                         android:paddingBottom="5dp"
                         android:paddingLeft="5dp"
@@ -244,7 +249,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".42"
+                            android:layout_weight=".35"
                             android:drawableRight="@drawable/required_icon"
                             android:padding="5dp"
                             android:text="@string/city"
@@ -255,7 +260,7 @@
                             android:id="@+id/adp_city_chooser"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".58"
+                            android:layout_weight=".65"
                             android:background="@drawable/dropdown_box"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
@@ -277,7 +282,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".42"
+                            android:layout_weight=".35"
                             android:padding="5dp"
                             android:text="@string/locality"
                             android:textColor="@color/black"
@@ -287,7 +292,7 @@
                             android:id="@+id/adp_locality_chooser"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".58"
+                            android:layout_weight=".65"
                             android:background="@drawable/dropdown_box"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
@@ -354,7 +359,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".42"
+                        android:layout_weight=".35"
                         android:drawableRight="@drawable/required_icon"
                         android:padding="5dp"
                         android:text="@string/start_date"
@@ -366,7 +371,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight=".58"
+                        android:layout_weight=".65"
                         android:background="@drawable/text_field"
                         android:clickable="true"
                         android:padding="5dp"
@@ -384,7 +389,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".42"
+                        android:layout_weight=".35"
                         android:drawableRight="@drawable/required_icon"
                         android:padding="5dp"
                         android:text="@string/end_date"
@@ -396,7 +401,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight=".58"
+                        android:layout_weight=".65"
                         android:background="@drawable/text_field"
                         android:clickable="true"
                         android:padding="5dp"
@@ -470,7 +475,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".45"
+                            android:layout_weight=".35"
                             android:drawableRight="@drawable/required_icon"
                             android:padding="5dp"
                             android:text="@string/count"
@@ -481,7 +486,7 @@
                             android:id="@+id/adp_count_voucher"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".55"
+                            android:layout_weight=".65"
                             android:background="@drawable/text_field"
                             android:digits="1234567890"
                             android:inputType="numberDecimal"
@@ -500,7 +505,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".45"
+                            android:layout_weight=".35"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
@@ -550,7 +555,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".42"
+                            android:layout_weight=".35"
                             android:drawableRight="@drawable/required_icon"
                             android:padding="5dp"
                             android:text="@string/voucher_code"
@@ -561,7 +566,7 @@
                             android:id="@+id/adp_single_code_edit_txt"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".58"
+                            android:layout_weight=".65"
                             android:background="@drawable/text_field"
                             android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                             android:inputType="text"
