--- a/trunk/MaxisGetIt/res/layout/activity_deal_post.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_deal_post.xml
@@ -34,8 +34,8 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/shape_bg_green_grey_stroke"
                     android:gravity="left"
-                    android:paddingLeft="10dp"
                     android:padding="5dp"
+                    android:paddingLeft="10dp"
                     android:text="@string/post_deal"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_17"
@@ -264,7 +264,7 @@
                             android:background="@drawable/dropdown_box"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
-                            android:paddingRight="25dp"
+                            android:paddingRight="35dp"
                             android:paddingTop="5dp"
                             android:scrollHorizontally="true"
                             android:singleLine="true"
@@ -296,7 +296,7 @@
                             android:background="@drawable/dropdown_box"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
-                            android:paddingRight="25dp"
+                            android:paddingRight="35dp"
                             android:paddingTop="5dp"
                             android:scrollHorizontally="true"
                             android:singleLine="true"
@@ -594,7 +594,9 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <LinearLayout
+             
+            </LinearLayout>
+               <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -612,8 +614,7 @@
                         <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginRight="2dp"
+                            android:layout_gravity="right"
                             android:layout_marginTop="2dp" >
 
                             <ImageView
@@ -654,7 +655,7 @@
                         <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_gravity="left"
                             android:layout_marginRight="2dp"
                             android:layout_marginTop="2dp" >
 
@@ -706,7 +707,7 @@
                         <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_gravity="right"
                             android:layout_marginRight="2dp"
                             android:layout_marginTop="2dp" >
 
@@ -749,7 +750,7 @@
                         <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_gravity="left"
                             android:layout_marginRight="2dp"
                             android:layout_marginTop="2dp" >
 
@@ -796,7 +797,6 @@
                     android:text="@string/post_deal"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
