--- a/trunk/MaxisGetIt/res/layout/activity_deal_post.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_deal_post.xml
@@ -156,7 +156,7 @@
                             android:background="@drawable/dropdown_box"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
-                            android:paddingRight="13dp"
+                            android:paddingRight="45dp"
                             android:paddingTop="5dp"
                             android:textColor="@color/black"
                             android:textSize="@dimen/sp_13" />
@@ -189,7 +189,7 @@
                         android:background="@drawable/dropdown_box"
                         android:paddingBottom="5dp"
                         android:paddingLeft="5dp"
-                        android:paddingRight="13dp"
+                        android:paddingRight="45dp"
                         android:paddingTop="5dp"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp_13" />
@@ -295,7 +295,7 @@
                             android:background="@drawable/dropdown_box"
                             android:paddingBottom="5dp"
                             android:paddingLeft="5dp"
-                            android:paddingRight="35dp"
+                            android:paddingRight="45dp"
                             android:paddingTop="5dp"
                             android:scrollHorizontally="true"
                             android:singleLine="true"
@@ -793,7 +793,7 @@
                     android:layout_marginTop="30dp"
                     android:background="@drawable/shape_green_curved_box"
                     android:clickable="true"
-                    android:text="@string/post_deal"
+                    android:text="Post Deal"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
         </LinearLayout>
