--- a/trunk/MaxisGetIt/res/layout/activity_deal_form.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_deal_form.xml
@@ -65,6 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight=".65"
                     android:background="@drawable/text_field"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:maxLength="30"
                     android:padding="5dp"
                     android:singleLine="true"
