--- a/trunk/MaxisGetIt/res/layout/header_base_screen.xml
+++ b/trunk/MaxisGetIt/res/layout/header_base_screen.xml
@@ -45,9 +45,8 @@
         android:layout_height="1dp"
         android:background="@color/vertical_line_seprator" />
 
-    <TextView
-        style="@style/common_style_for_beta_version_header"
-        android:visibility="gone" />
+    <TextView style="@style/common_style_for_beta_version_header" 
+        android:visibility="gone"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,7 +66,6 @@
             android:hint="@string/search_query"
             android:inputType="none"
             android:singleLine="true"
-            android:clickable="true"
             android:textSize="@dimen/sp_12" />
 
         <ImageView
@@ -78,75 +76,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight=".1"
             android:background="@drawable/search_btn"
-            android:clickable="true"
-            android:visibility="visible" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/advanceSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/header_bg_color"
-        android:gravity="center_horizontal" 
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/currentCity"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:background="@color/header_bg_color"
-            android:drawableRight="@drawable/arrow"
-            android:padding="10dp"
-            android:paddingLeft="15dp"
-            android:text="In Delhi"
-            android:textSize="@dimen/sp_14" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/vertical_line_seprator" />
-
-        <TextView
-            android:id="@+id/currentLocality"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:background="@color/header_bg_color"
-            android:drawableRight="@drawable/arrow"
-            android:padding="10dp"
-            android:paddingLeft="15dp"
-            android:text="Your Current Area Sarita Vihar"
-            android:textSize="@dimen/sp_14" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/vertical_line_seprator" />
-
-        <TextView
-            android:id="@+id/mainSearchButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#1663af"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_margin="5dp"
-            android:text="Search"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_14" />
-        
-        <ImageView 
-            android:id="@+id/upArrow"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-           android:src="@drawable/up_arrow"
-           android:gravity="center"
-           android:layout_gravity="center"
-           android:padding="5dp"
-            />
+            android:clickable="true" />
     </LinearLayout>
 
 </LinearLayout>
